chore: update libs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -82,6 +82,7 @@
       "no-return-await": [
         "error"
       ],
+      "react/react-in-jsx-scope": "off",
       "react/jsx-no-undef": [
         "off"
       ],
