--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.0",
+    "@material-ui/core": "^4.11.2",
+    "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "styled-components": "^5.2.0"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
-    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
